💅 Fix ios overflow issues

--- a/pages/index.css
+++ b/pages/index.css
@@ -15,7 +15,13 @@
 
 body {
   overflow: hidden;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
+
+.layout {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 /* #__next {
